--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <header>
     <div class="header-inner">
       <!-- Byt src till din bildfil -->
-      <img src="https://via.placeholder.com/140x140.png?text=Din+Bild" alt="Porträttfoto" class="profile-pic" />
+     <img src="jag.png" alt="Min profilbild" width="140" height="140" />
       <p class="header-text">
         Välkommen! Jag erbjuder tryggt samtalsstöd online för dig som vill hitta tillbaka till livsglädjen. Oavsett oro, ångest eller andra utmaningar finns jag här för dig.
       </p>
