--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <header>
     <div class="header-inner">
       <!-- Byt src till din bildfil -->
-     <img src="jag.png" alt="Min profilbild" width="140" height="140" />
+     <img src="jag.jpg" alt="Min profilbild" width="140" height="140" />
       <p class="header-text">
         Välkommen! Jag erbjuder tryggt samtalsstöd online för dig som vill hitta tillbaka till livsglädjen. Oavsett oro, ångest eller andra utmaningar finns jag här för dig.
       </p>
