--- a/index.html
+++ b/index.html
@@ -2,319 +2,343 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>En tryggare väg</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter&display=swap" rel="stylesheet" />
   <style>
-    /* Tema färger */
-    :root {
-      --color-bg: #f9f6f1;
-      --color-primary: #2a3d3b;        /* Mörkgrön/blågrön */
-      --color-secondary: #d5e5e3;      /* Ljusgrön/grå */
-      --color-accent: #a7cfc8;         /* Turkosgrön */
-      --color-text: #333;
-      --color-plommon: #9c7ca6;        /* Ljus plommon */
-      --color-plommon-dark: #7b5f82;   /* Mörkare plommon */
-      --color-white: #fff;
-      --color-box-bg: #fff;
-    }
-    /* Reset & grund */
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: var(--color-bg);
-      color: var(--color-text);
+      background-color: #f9f6f1;
+      color: #333;
       line-height: 1.6;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
     }
-    a {
-      text-decoration: none;
-      color: var(--color-accent);
-    }
-    a:hover {
-      color: var(--color-plommon-dark);
-    }
-
-    /* Container maxbredd */
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 2rem 1rem;
-    }
-
-    /* HEADER med bild + text i flex */
     header {
-      background-color: var(--color-secondary);
-      border-bottom: 5px solid var(--color-primary);
+      background-color: #d5e5e3;
       padding: 2rem 1rem;
+      display: flex;
+      justify-content: center;
     }
-    .header-inner {
+    .profile-container {
+      background: white;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      border-radius: 16px;
       display: flex;
       align-items: center;
+      max-width: 900px;
+      padding: 1.5rem 2rem;
       gap: 2rem;
-      flex-wrap: wrap;
-      max-width: 960px;
-      margin: 0 auto;
+      width: 100%;
     }
     .profile-pic {
-      flex: 0 0 140px;
       width: 140px;
       height: 140px;
-      border-radius: 12px;
       object-fit: cover;
-      border: 4px solid var(--color-accent);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      background-color: var(--color-white);
+      border-radius: 16px;
+      flex-shrink: 0;
+      box-shadow: 0 0 10px rgba(42,61,59,0.2);
     }
-    .header-text {
-      flex: 1 1 300px;
-      color: var(--color-primary);
+    .profile-text h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 1.25rem;
+      font-size: 2.5rem;
+      margin: 0 0 0.5rem 0;
+      color: #2a3d3b;
+    }
+    .profile-text p {
+      font-size: 1.2rem;
+      margin: 0;
+      color: #555;
+      max-width: 500px;
       line-height: 1.4;
-      font-weight: 600;
     }
 
-    /* TRE RUTOR: Flex container */
-    .features {
+    main {
+      max-width: 960px;
+      margin: 3rem auto;
+      padding: 0 1rem;
+    }
+
+    .cards {
       display: flex;
       gap: 1.5rem;
-      margin: 3rem auto 4rem;
-      max-width: 960px;
       flex-wrap: wrap;
       justify-content: center;
+      margin-bottom: 3rem;
     }
-    .feature {
-      flex: 1 1 250px;
-      background-color: var(--color-box-bg);
+    .card {
+      background: white;
       border-radius: 16px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       padding: 2rem 1.5rem;
+      flex: 1 1 280px;
+      max-width: 300px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       text-align: center;
-      color: var(--color-primary);
+      color: #2a3d3b;
       position: relative;
-      font-weight: 600;
-      font-size: 1.15rem;
-      min-height: 190px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 1rem;
+    }
+    .card.sms {
+      background-color: #d5e5e3;
+    }
+    .card.anxiety {
+      background-color: #c7b8dc; /* ljus plommon/lila */
+      color: #3e2f52;
+    }
+    .card.depression {
+      background-color: #d5e5e3;
     }
 
-    /* Specifik feature bakgrund & färger */
-    .feature.samtalstod {
-      background-color: var(--color-secondary);
-      color: var(--color-primary);
+    /* Ikoner */
+    .icon {
+      font-size: 48px;
+      margin-bottom: 1rem;
+      display: inline-block;
+      color: inherit;
     }
-    .feature.angesthantering {
-      background-color: var(--color-plommon);
-      color: var(--color-white);
+    .icon.sms::before {
+      content: "✉️";
     }
-    .feature.depression {
-      background-color: var(--color-box-bg);
-      color: var(--color-primary);
-    }
-
-    /* Ikoner som SVG inline styles */
-    .feature svg {
-      width: 48px;
-      height: 48px;
-      margin: 0 auto;
-      fill: currentColor;
-    }
-
-    /* Plus-ring för ångesthantering */
-    .feature.angesthantering .plus-ring {
+    .icon.plus-circle {
       position: absolute;
-      top: 18px;
+      top: 15px;
       left: 50%;
       transform: translateX(-50%);
-      width: 60px;
-      height: 60px;
-      border: 4px solid var(--color-white);
+      width: 48px;
+      height: 48px;
+      border: 4px solid #3e2f52;
       border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-sizing: border-box;
-      z-index: 1;
+      font-size: 36px;
+      color: #3e2f52;
+      line-height: 40px;
+      font-weight: bold;
+      user-select: none;
+      cursor: default;
     }
-    .feature.angesthantering .plus-ring svg {
-      width: 28px;
-      height: 28px;
-      fill: var(--color-white);
-      margin: 0;
+    .icon.plus-circle::after {
+      content: "+";
+      position: absolute;
+      top: 3px;
+      left: 13px;
+    }
+    .icon.rain-cloud {
+      position: relative;
+      display: inline-block;
+      width: 48px;
+      height: 32px;
+      background: #7f8c8d;
+      border-radius: 20px 20px 12px 12px;
+      margin-bottom: 1rem;
+    }
+    .icon.rain-cloud::before,
+    .icon.rain-cloud::after {
+      content: '';
+      position: absolute;
+      background: #7f8c8d;
+      border-radius: 20px 20px 12px 12px;
+      width: 32px;
+      height: 24px;
+      top: -16px;
+    }
+    .icon.rain-cloud::before {
+      left: 4px;
+    }
+    .icon.rain-cloud::after {
+      left: 20px;
+    }
+    .raindrop {
+      position: absolute;
+      bottom: -10px;
+      width: 6px;
+      height: 12px;
+      background: #3498db;
+      border-radius: 3px 3px 6px 6px;
+      animation: rain-fall 1.5s infinite;
+    }
+    .raindrop:nth-child(1) { left: 10px; animation-delay: 0s; }
+    .raindrop:nth-child(2) { left: 22px; animation-delay: 0.5s; }
+    .raindrop:nth-child(3) { left: 34px; animation-delay: 1s; }
+    @keyframes rain-fall {
+      0% { transform: translateY(0); opacity: 1; }
+      100% { transform: translateY(15px); opacity: 0; }
     }
 
-    /* OM MIG sektion */
-    .about-section {
+    /* Meditation figure */
+    .meditation-section {
+      display: flex;
+      gap: 2rem;
+      align-items: center;
       max-width: 960px;
       margin: 0 auto 4rem;
-      display: flex;
-      align-items: center;
-      gap: 2rem;
       padding: 0 1rem;
-      flex-wrap: wrap;
     }
     .meditation-figure {
-      flex: 0 0 140px;
-      width: 140px;
-      height: 140px;
-      background: var(--color-secondary);
-      border-radius: 16px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      width: 160px;
+      height: 160px;
+      background: #d5e5e3;
+      border-radius: 50%;
+      position: relative;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      flex-shrink: 0;
     }
-    /* Enkel stilren meditativ figur (SVG) */
-    .meditation-figure svg {
+    /* Enkel mild mediterande figur */
+    .meditation-figure .head {
+      width: 50px;
+      height: 50px;
+      background: #8aa399;
+      border-radius: 50%;
+      position: absolute;
+      top: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      box-shadow: inset 0 4px 6px rgba(0,0,0,0.2);
+    }
+    .meditation-figure .body {
       width: 80px;
-      height: 80px;
-      fill: var(--color-primary);
+      height: 100px;
+      background: #aac6b7;
+      border-radius: 40px / 100px;
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      box-shadow: inset 0 6px 10px rgba(0,0,0,0.15);
     }
-    .about-text {
-      flex: 1 1 300px;
-      font-family: 'Playfair Display', serif;
-      font-size: 1.5rem;
-      color: var(--color-primary);
-      font-weight: 600;
-      margin-bottom: 0.5rem;
-    }
-    .about-description {
-      flex: 1 1 300px;
-      font-size: 1rem;
-      color: var(--color-text);
-      max-width: 560px;
-      line-height: 1.5;
+    .meditation-figure .arms {
+      position: absolute;
+      bottom: 60px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90px;
+      height: 50px;
+      border-radius: 45px / 50px;
+      background: #b9d1c9;
+      box-shadow: inset 0 4px 6px rgba(0,0,0,0.1);
+      clip-path: ellipse(90% 100% at 50% 50%);
     }
 
-    /* KONTAKT sektion */
-    .contact-section {
-      background-color: var(--color-secondary);
-      padding: 2rem 1rem;
-      text-align: center;
-      max-width: 960px;
-      margin: 0 auto 3rem;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+    .meditation-text {
+      flex: 1;
+      color: #2a3d3b;
     }
-    .contact-text {
+    .meditation-text h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.2rem;
+      margin-top: 0;
+      margin-bottom: 0.7rem;
+    }
+    .meditation-text p {
       font-size: 1.1rem;
-      color: var(--color-primary);
-      margin-bottom: 1rem;
-      font-weight: 600;
+      line-height: 1.5;
+      max-width: 600px;
+    }
+
+    /* Kontakt sektion */
+    .contact-section {
+      background-color: #d5e5e3;
+      border-radius: 16px;
+      max-width: 600px;
+      margin: 0 auto 4rem;
+      padding: 2rem 1.5rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      text-align: center;
+      color: #2a3d3b;
+    }
+    .contact-section p {
+      margin-bottom: 1.5rem;
+      font-size: 1.1rem;
     }
     .contact-button {
-      background-color: var(--color-accent);
-      color: var(--color-white);
-      padding: 0.75rem 2rem;
-      font-size: 1.1rem;
+      background-color: #a7cfc8;
       border: none;
-      border-radius: 8px;
+      padding: 0.75rem 2rem;
+      color: white;
+      font-size: 1rem;
+      border-radius: 12px;
       cursor: pointer;
-      font-weight: 600;
       transition: background-color 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
     }
-    .contact-button:hover,
-    .contact-button:focus {
-      background-color: var(--color-plommon-dark);
-      outline: none;
+    .contact-button:hover {
+      background-color: #8fbab3;
     }
 
-    /* Responsive */
-    @media (max-width: 640px) {
-      .header-inner, .about-section {
+    @media (max-width: 700px) {
+      .profile-container {
+        flex-direction: column;
+        text-align: center;
+      }
+      .profile-pic {
+        margin-bottom: 1rem;
+        width: 120px;
+        height: 120px;
+      }
+      .cards {
         flex-direction: column;
         align-items: center;
       }
-      .header-text, .about-text, .about-description {
+      .meditation-section {
+        flex-direction: column;
         text-align: center;
       }
-      .features {
-        flex-direction: column;
-        gap: 1.5rem;
-      }
-      .feature {
-        min-height: unset;
+      .meditation-text {
+        max-width: 100%;
       }
     }
   </style>
 </head>
 <body>
-
   <header>
-    <div class="header-inner">
-      <!-- Byt src till din bildfil -->
-     <img src="jag.jpg" alt="Min profilbild" width="140" height="140" />
-      <p class="header-text">
-        Välkommen! Jag erbjuder tryggt samtalsstöd online för dig som vill hitta tillbaka till livsglädjen. Oavsett oro, ångest eller andra utmaningar finns jag här för dig.
-      </p>
+    <div class="profile-container">
+      <img src="jag" alt="Profilbild" class="profile-pic" />
+      <div class="profile-text">
+        <h1>Välkommen</h1>
+        <p>Jag erbjuder tryggt samtalsstöd online för dig som vill börja leva igen. Oavsett om du känner oro, ångest eller andra utmaningar i livet finns jag här för att hjälpa dig.</p>
+      </div>
     </div>
   </header>
 
-  <main class="container">
-    <section class="features" aria-label="Våra tjänster">
-      <!-- Samtalstöd -->
-      <article class="feature samtalstod" tabindex="0" aria-labelledby="samtalstod-title">
-        <!-- SMS-ikon -->
-        <svg aria-hidden="true" viewBox="0 0 24 24">
-          <path d="M20 2H4a2 2 0 0 0-2 2v16l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z"/>
-        </svg>
-        <h3 id="samtalstod-title">Samtalstöd</h3>
-        <p>Du som behöver någon att prata med</p>
-      </article>
+  <main>
+    <section class="cards" aria-label="Tjänster">
+      <div class="card sms" role="region" aria-labelledby="sms-title">
+        <div class="icon sms" aria-hidden="true"></div>
+        <h3 id="sms-title">Samtalstöd</h3>
+        <p>Du som behöver någon att prata med.</p>
+      </div>
 
-      <!-- Ångesthantering -->
-      <article class="feature angesthantering" tabindex="0" aria-labelledby="angesthantering-title">
-        <div class="plus-ring" aria-hidden="true">
-          <svg viewBox="0 0 24 24" >
-            <rect x="10" y="4" width="4" height="16" rx="1"/>
-            <rect x="4" y="10" width="16" height="4" rx="1"/>
-          </svg>
+      <div class="card anxiety" role="region" aria-labelledby="anxiety-title">
+        <div class="icon plus-circle" aria-hidden="true"></div>
+        <h3 id="anxiety-title">Ångesthantering</h3>
+        <p>En tryggare väg med KBT.</p>
+      </div>
+
+      <div class="card depression" role="region" aria-labelledby="depression-title">
+        <div class="icon rain-cloud" aria-hidden="true">
+          <span class="raindrop"></span>
+          <span class="raindrop"></span>
+          <span class="raindrop"></span>
         </div>
-        <h3 id="angesthantering-title" style="margin-top: 48px;">Ångesthantering</h3>
-        <p>En tryggare väg med KBT</p>
-      </article>
-
-      <!-- Depression -->
-      <article class="feature depression" tabindex="0" aria-labelledby="depression-title">
-        <!-- Regnmoln-ikon -->
-        <svg aria-hidden="true" viewBox="0 0 24 24" >
-          <path d="M6 19a4 4 0 0 1 0-8 5 5 0 0 1 9.9-1.4 3.5 3.5 0 0 1 .6 6.9H6z"/>
-        </svg>
         <h3 id="depression-title">Depression</h3>
-        <p>Du som lider av depression</p>
-      </article>
+        <p>Du som lider av depression.</p>
+      </div>
     </section>
 
-    <section class="about-section" aria-labelledby="about-heading">
+    <section class="meditation-section">
       <div class="meditation-figure" aria-hidden="true">
-        <!-- Enkel meditativ figur SVG -->
-        <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Meditativ figur">
-          <circle cx="32" cy="14" r="10"/>
-          <path d="M22 54c0-10 20-10 20 0" stroke="currentColor" stroke-width="4" fill="none" stroke-linecap="round"/>
-          <path d="M32 24v20" stroke="currentColor" stroke-width="4" stroke-linecap="round"/>
-          <path d="M22 44c0-4 20-4 20 0" stroke="currentColor" stroke-width="4" fill="none" stroke-linecap="round"/>
-        </svg>
+        <div class="head"></div>
+        <div class="body"></div>
+        <div class="arms"></div>
       </div>
-      <div>
-        <h2 id="about-heading" class="about-text">Om mig</h2>
-        <p class="about-description">
-          Med många års erfarenhet av att stötta människor i svåra livssituationer hjälper jag dig att gå från att bara överleva till att verkligen leva ett meningsfullt och värdigt liv.
-        </p>
+      <div class="meditation-text">
+        <h2>Om mig</h2>
+        <p>Jag har många års erfarenhet av att hjälpa individer att må bättre. Mitt fokus är att stödja dig i att gå från att bara överleva till att verkligen börja leva ett värdigt och meningsfullt liv.</p>
       </div>
     </section>
 
-    <section class="contact-section" aria-label="Kontakt">
-      <p class="contact-text">
-        För att boka ett samtal eller om du har frågor, vänligen kontakta mig via e-post.
-      </p>
-      <button class="contact-button" onclick="window.location.href='mailto:kontakt@example.com'">Skicka e-post</button>
+    <section class="contact-section" role="contentinfo">
+      <h2>Kontakt</h2>
+      <p>För att boka tid eller fråga om samtalsstöd, vänligen kontakta mig via SMS eller telefon.</p>
+      <a href="tel:+46701234567" class="contact-button" aria-label="Ring mig">Ring mig</a>
     </section>
   </main>
-
 </body>
 </html>
